fix service mapping gsi

--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,9 @@ JWT_SECRET=your-jwt-secret-key
 
 # GHN (Giao Hàng Nhanh) Configuration
 GHN_TOKEN=your-ghn-token
-GHN_SHOP_ID=your-shop-id
-GHN_DISTRICT_ID=your-district-id
-GHN_WARD_CODE=your-ward-code
+GHN_SHOP_ID=123456
+GHN_DISTRICT_ID=1234
+GHN_WARD_CODE=12345
 
 # PayOS Configuration
 PAYOS_CLIENT_ID=your-payos-client-id
