--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 APP_JWT_SECRET=${JWT_SECRET:your-jwt-secret-key}
 
 ghn.token=${GHN_TOKEN:your-ghn-token}
-ghn.shop_id=${GHN_SHOP_ID:your-shop-id}
-ghn.shop.district_id=${GHN_DISTRICT_ID:your-district-id}
+ghn.shop_id=${GHN_SHOP_ID:0}
+ghn.shop.district_id=${GHN_DISTRICT_ID:0}
 ghn.shop.ward_code=${GHN_WARD_CODE:your-ward-code}
 
 
